--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,8 +166,8 @@ hr {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: #fff;
-  background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background-color: #fb5cb9;
+  background-image: linear-gradient(to right, #fb5cb9 0%, #fb5cb9 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
@@ -177,6 +177,9 @@ hr {
   transition: all 0.5s linear;
   border: 0;
 }
+.pink-background {
+  background-color: #fb5cb9 !important;
+}
 .btn-custom:hover,
 .btn-custom:focus,
 .btn-custom.focus,
@@ -184,7 +187,7 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #6372ff;
+  background-color: #c52c85;
 }
 .btn:active,
 .btn.active {
@@ -205,7 +208,7 @@ a:focus,
 }
 /* Header Section */
 .intro {
-  display: table;
+  display: flex;
   width: 100%;
   padding: 0;
   background: url(../img/intro-bg.jpg) center center no-repeat;
@@ -221,11 +224,12 @@ a:focus,
 .intro h1 {
   font-family: "Raleway", sans-serif;
   color: #fff;
-  font-size: 82px;
+  font-size: 62px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 10px;
+  margin-top: -60px;
+  margin-bottom: 0;
+  
 }
 .intro h1 span {
   font-weight: 800;
@@ -233,8 +237,8 @@ a:focus,
 }
 .intro p {
   color: #fff;
-  font-size: 22px;
-  font-weight: 300;
+  font-size: 25px;
+  font-weight: 400;
   line-height: 30px;
   margin: 0 auto;
   margin-bottom: 60px;
