--- a/public/css/style.css
+++ b/public/css/style.css
@@ -314,7 +314,7 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #7a84da 0%, #96bce5 100%);
   color: #fff;
 }
 #services .service-desc {
